--- a/index.htm
+++ b/index.htm
@@ -1536,8 +1536,8 @@ document.addEventListener("scroll", function () {
       <div class="footer-box">
         <h3>Quick Links</h3>
         <ul>
-          <li><a href="/index.htm">Home</a></li>
-          <li><a href="/how-it-works-3-2/index.htm">About</a></li>
+          <li><a href="index.htm">Home</a></li>
+          <li><a href="about.html">About</a></li>
           <li><a href="/choose-imly/index.htm">Process</a></li>
           <li><a href="/pricing-2-2-3-2-2-2-3-2/index.htm">Services</a></li>
           <li><a href="/about-3/index.htm">Projects</a></li>
